# LoveLetter

./: .gitignore  CMakeLists.txt  Makefile
App/: Application.h
GameCommon/: Card.h  GameDefinitions.h  GameUtils.cpp  GameUtils.h  TypesSerializers.cpp
GameController/: Game.cpp  Game.h  GameController.cpp  GameController.h  main.cpp
GameServer/: Bot_Random.cpp  Bot_Random.h  Deck.cpp  Deck.h  Game.cpp  Game.h  GameServer.cpp  GameServer.h  InfSup_Bot.cpp  InfSup_Bot.h  Joueur.cpp  Joueur.h  ServerDebug.h  Terminator.cpp  Terminator.h  main.cpp
Msg/: Deserializer.cpp  Deserializer.h  GenericMsg.cpp  GenericMsg.h  GenericMsg.hpp  Serializer.cpp  Serializer.h  TestStruct.h  TypesSerializer.cpp  TypesTools.cpp  TypesTools.h
Network/: IConnection.cpp  IConnection.h  Network.cpp  Network.h  NetworkDefines.h  TCPClientConnection.cpp  TCPClientConnection.h  TCPServerConnection.cpp  TCPServerConnection.h
View/: Presentation.cpp  Presentation.h  View.cpp  View.h  main.cpp
View/interface/: .qmake.stash  Makefile  Presentation.cpp  Presentation.h  TO DO  View.cpp  View.h  card.cpp  card.h  computer.cpp  computer.h  computer.ui  game.cpp  game.h  game.ui  ihm  ihm.pro  ihm.pro.user.1327aee  ihm.pro.user.20f2bbd  ihm.pro.user.9cfb096  ihm.pro.user.b9172fd  images.qrc  information.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_card.cpp  moc_computer.cpp  moc_game.cpp  moc_information.cpp  moc_mainwindow.cpp  moc_mode.cpp  moc_online.cpp  moc_playernumber.cpp  online.cpp  online.h  online.ui  playernumber.cpp  playernumber.h  (+8 more)
View/interface/l10n/: translations_en_EN.ts  translations_fr_FR.qm  translations_fr_FR.ts
to_be_integrated/: Bot_Random.cpp  Bot_Random.h  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Joueur.cpp  Joueur.h
